# PLY.jl

./: License.txt  README.md
lib/: LICENSE.txt
libply/: CMakeLists.txt  plytest.c
libplyfile/: CMakeLists.txt  README.md  facemodel.ply  plyfile.c  plyfile.h  plyfiletest.c
src/: PLY.jl
test/: testply.jl
